--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -124,6 +124,11 @@ liip_imagine:
         filter_runtime_action: liip_imagine.controller:filterRuntimeAction
     filter_sets:
 
+        facebook_share:
+            quality: 100
+            filters:
+                thumbnail: { size: [1200, 630], mode: outbound, allow_upscale: true }
+
 
         #######################
         ###  thumb_200_200  ###
